--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
   <link rel='stylesheet' href='./css/global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
-  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="https://www.braintapper.com/images/favicon.ico">
-  <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon_57.png">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/images/favicon_57.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon_72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon_114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon_120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon_144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon_152.png">
+  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="./images/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="57x57" href="./images/favicon/favicon_57.png">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./images/favicon/favicon_57.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./images/favicon/favicon_72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./images/favicon/favicon_114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./images/favicon/favicon_120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./images/favicon/favicon_144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./images/favicon/favicon_152.png">
 
 
 
