Combobox wip, add cssgg

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
   -->
 
-
+  <link rel='stylesheet' href='./css/css.gg.css'>
   <link rel='stylesheet' href='./css/global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
