--- a/public/index.html
+++ b/public/index.html
@@ -36,22 +36,22 @@
 
 
 
-  <script src='./codemirror/codemirror.js'></script>
-  <script src='./codemirror/mode/meta.js'></script>
+  <script src='./js/codemirror/codemirror.js'></script>
+  <script src='./js/codemirror/mode/meta.js'></script>
   <!-- hypermd -->
   <!-- always preload these codemirror addons -->
-  <script id="./codemirror/addon/fold/foldcode.js" src="./codemirror/addon/fold/foldcode.js"></script>
-  <script id="./codemirror/addon/fold/foldgutter.js" src="./codemirror/addon/fold/foldgutter.js"></script>
-  <script id="./codemirror/addon/fold/markdown-fold.js" src="./codemirror/addon/fold/markdown-fold.js"></script>
-  <script id="./codemirror/addon/mode/overlay.js" src="./codemirror/addon/mode/overlay.js"></script>
+  <script id="./js/codemirror/addon/fold/foldcode.js" src="./js/codemirror/addon/fold/foldcode.js"></script>
+  <script id="./js/codemirror/addon/fold/foldgutter.js" src="./js/codemirror/addon/fold/foldgutter.js"></script>
+  <script id="./js/codemirror/addon/fold/markdown-fold.js" src="./js/codemirror/addon/fold/markdown-fold.js"></script>
+  <script id="./js/codemirror/addon/mode/overlay.js" src="./js/codemirror/addon/mode/overlay.js"></script>
   <!-- always preload these codemirror modes -->
-  <script id="./codemirror/mode/markdown/markdown.js" src="./codemirror/mode/markdown/markdown.js"></script>
-  <script id="./codemirror/mode/xml/xml.js" src="./codemirror/mode/xml/xml.js"></script>
-  <script id="./codemirror/mode/stex/stex.js" src="./codemirror/mode/stex/stex.js"></script>
-  <script id="./codemirror/mode/yaml/yaml.js" src="./codemirror/mode/yaml/yaml.js"></script>
-  <script id="./codemirror/mode/javascript/javascript.js" src="./codemirror/mode/javascript/javascript.js"></script>
+  <script id="./js/codemirror/mode/markdown/markdown.js" src="./js/codemirror/mode/markdown/markdown.js"></script>
+  <script id="./js/codemirror/mode/xml/xml.js" src="./js/codemirror/mode/xml/xml.js"></script>
+  <script id="./js/codemirror/mode/stex/stex.js" src="./js/codemirror/mode/stex/stex.js"></script>
+  <script id="./js/codemirror/mode/yaml/yaml.js" src="./js/codemirror/mode/yaml/yaml.js"></script>
+  <script id="./js/codemirror/mode/javascript/javascript.js" src="./js/codemirror/mode/javascript/javascript.js"></script>
   <!-- hypermd all in one -->
-  <script src="./hypermd/ai1.js"></script>
+  <script src="./js/hypermd/ai1.js"></script>
   <!-- mathjax -->
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -62,18 +62,18 @@
         }
     });
   </script>
-  <script src="./mathjax/MathJax.js"></script>
-  <script src="./hypermd/powerpack/fold-math-with-mathjax.js"></script>
+  <script src="./js/mathjax/MathJax.js"></script>
+  <script src="./js/hypermd/powerpack/fold-math-with-mathjax.js"></script>
   <!-- marked and powerpack/hover-with-marked -->
-  <script src="./hypermd/marked.js"></script>
-  <script src="./hypermd/powerpack/hover-with-marked.js"></script>
+  <script src="./js/hypermd/marked.js"></script>
+  <script src="./js/hypermd/powerpack/hover-with-marked.js"></script>
   <!-- Turndown and powerpack/paste-with-turndown -->
-  <script src="./hypermd/turndown.js"></script>
-  <script src="./hypermd/turndown-plugin-gfm.js"></script>
-  <script src="./hypermd/powerpack/paste-with-turndown.js"></script>
+  <script src="./js/hypermd/turndown.js"></script>
+  <script src="./js/hypermd/turndown-plugin-gfm.js"></script>
+  <script src="./js/hypermd/powerpack/paste-with-turndown.js"></script>
   <!-- Use EmojiOne to render emoji  -->
-  <script src="./hypermd/emojione.js"></script>
-  <script src="./hypermd/powerpack/fold-emoji-with-emojione.js"></script>
+  <script src="./js/hypermd/emojione.js"></script>
+  <script src="./js/hypermd/powerpack/fold-emoji-with-emojione.js"></script>
 
   <!-- /hypermd -->
 
