--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,17 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
   <!--
-  <link rel='stylesheet' href='./css/codemirror.css'>
-  <link rel='stylesheet' href='./css/foldgutter.css'>
+
   <link rel='stylesheet' href='./cl-editor.css'>
   <link rel='stylesheet' href='./hypermd-editor.css'>
 
-  <link rel='stylesheet' href='./global-codemirror.css'>
+
 
 
 
   -->
 
-  <link rel='stylesheet' href='./css/css.gg.css'>
+  <link rel='stylesheet' href='./css/vendor/css.gg.css/css.gg.css'>
   <link rel='stylesheet' href='./css/global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
@@ -36,46 +35,6 @@
 
 
 
-  <script src='./js/codemirror/codemirror.js'></script>
-  <script src='./js/codemirror/mode/meta.js'></script>
-  <!-- hypermd -->
-  <!-- always preload these codemirror addons -->
-  <script id="./js/codemirror/addon/fold/foldcode.js" src="./js/codemirror/addon/fold/foldcode.js"></script>
-  <script id="./js/codemirror/addon/fold/foldgutter.js" src="./js/codemirror/addon/fold/foldgutter.js"></script>
-  <script id="./js/codemirror/addon/fold/markdown-fold.js" src="./js/codemirror/addon/fold/markdown-fold.js"></script>
-  <script id="./js/codemirror/addon/mode/overlay.js" src="./js/codemirror/addon/mode/overlay.js"></script>
-  <!-- always preload these codemirror modes -->
-  <script id="./js/codemirror/mode/markdown/markdown.js" src="./js/codemirror/mode/markdown/markdown.js"></script>
-  <script id="./js/codemirror/mode/xml/xml.js" src="./js/codemirror/mode/xml/xml.js"></script>
-  <script id="./js/codemirror/mode/stex/stex.js" src="./js/codemirror/mode/stex/stex.js"></script>
-  <script id="./js/codemirror/mode/yaml/yaml.js" src="./js/codemirror/mode/yaml/yaml.js"></script>
-  <script id="./js/codemirror/mode/javascript/javascript.js" src="./js/codemirror/mode/javascript/javascript.js"></script>
-  <!-- hypermd all in one -->
-  <script src="./js/hypermd/ai1.js"></script>
-  <!-- mathjax -->
-  <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-        jax: ["input/TeX", "output/HTML-CSS","output/NativeMML","output/SVG"],
-        extensions: ["MathMenu.js","MathZoom.js", "AssistiveMML.js", "a11y/accessibility-menu.js"],
-        TeX: {
-            extensions: ["AMSmath.js","AMSsymbols.js","noErrors.js","noUndefined.js"]
-        }
-    });
-  </script>
-  <script src="./js/mathjax/MathJax.js"></script>
-  <script src="./js/hypermd/powerpack/fold-math-with-mathjax.js"></script>
-  <!-- marked and powerpack/hover-with-marked -->
-  <script src="./js/hypermd/marked.js"></script>
-  <script src="./js/hypermd/powerpack/hover-with-marked.js"></script>
-  <!-- Turndown and powerpack/paste-with-turndown -->
-  <script src="./js/hypermd/turndown.js"></script>
-  <script src="./js/hypermd/turndown-plugin-gfm.js"></script>
-  <script src="./js/hypermd/powerpack/paste-with-turndown.js"></script>
-  <!-- Use EmojiOne to render emoji  -->
-  <script src="./js/hypermd/emojione.js"></script>
-  <script src="./js/hypermd/powerpack/fold-emoji-with-emojione.js"></script>
-
-  <!-- /hypermd -->
 
 	<script defer src='./build/bundle.js'></script>
 
